2015-02-26  Corinna Vinschen  <corinna@vinschen.de>

	* posix_ipc.cc (ipc_mutex_lock): Revert unneeded call to signal handler.

2015-02-26  Corinna Vinschen  <corinna@vinschen.de>

	* posix_ipc.cc (ipc_mutex_lock): Add bool parameter to influence if
	cygwait should be in EINTR or in restart mode.  Call signal handler
	if in EINTR mode.
	(mq_getattr): Call ipc_mutex_lock in restart mode.
	(mq_setattr): Ditto.
	(mq_notify): Ditto.
	(_mq_send): Call ipc_mutex_lock in EINTR mode.
	(_mq_receive): Ditto.

2015-02-26  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_termios.cc (fhandler_termios::line_edit): Fix condition
	for writing remaining bytes in readahead buffer in non-canonical mode.

2015-02-25  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (setacl): Always grant default owner entry
	STANDARD_RIGHTS_ALL and FILE_WRITE_ATTRIBUTES access, too.

2015-02-25  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_tape.cc (fhandler_dev_tape::_lock): Add cw_sig_restart to
	cygwait call.
	* thread.cc (pthread_mutex::lock): Ditto.
	(semaphore::_timedwait): Fix formatting.
	(semaphore::_wait): Ditto.
	* thread.h (fast_mutex::lock): Ditto.

2015-02-25  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (alloc_sd): Don't apply temporary workaround for chmod
	to DEF_USER_OBJ, DEF_GROUP_OBJ, and DEF_OTHER_OBJ ACEs.

2015-02-25  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_tty.cc (fhandler_pty_slave::read): Having no input is not an
	error condition for tcflush.

2015-02-25  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (alloc_sd): Fix comment style.  Remove code unused for
	years.

2015-02-25  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (alloc_sd): Add temporary workaround which disallows
	any secondary user to have more permissions than the primary group
	in calls to chmod.  Add comment to explain why.

2015-02-25  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (client_request_pwdgrp::client_request_pwdgrp): Add missing